src/styles/main.scss
/*  ===================
    Table of contents

        - Global styles
        - Theme/Typography
        - Components
        - Partials

    =================== */

/*  ===================
    1. Global styles
    =================== */

body.remove-scrolling {
    margin: 0;
    height: 100%;
    overflow: hidden;
}

/*  ===================
    Theme/Typography
    =================== */
#login-popup {
    > div {
        text-align: center;
        z-index: 99;
        position: absolute;
        animation: var(--animation) 1.5s;
    }

    .content {
        color: var(--primary-text-color);
        background-color: var(--content-bg-color, #fff);
        border-radius: var(--container-border-radius);
        padding: var(--content-padding, 1.5em);
        position: relative;
        width: 400px;
    }

    /*  ===================
    Components
    =================== */

    // Header Image
    .header-img {
        content: var(--header-img);
        max-width: var(--img-max-width, 200px);
        margin: 0 auto;
    }

    // Title
    .title {
        font-family: var(--large-font-family);
        font-size: var(--large-font-size);
        font-weight: var(--large-font-weight);
        letter-spacing: var(--large-letter-spacing);
        line-height: var(--large-line-height);
        text-transform: var(--large-text-transform);
    }

    // Sub-title
    .sub-title {
        font-size: var(--medium-text-size);
        font-weight: var(--medium-font-weight);
        color: var(--secondary-text-color, #02100a);
    }

    // Buttons
    // I need to refactor it
    .btn {
        border: none;
        color: #fff;
        cursor: pointer;
        padding: 10px;
        text-transform: uppercase;
        width: 100%;
        margin-top: 15px;
    }
    .btn .fa {
        font-size: 1.4em;
    }

    .btn .fa.off {
        display: none;
    }

    .btn.btn-primary,
    .btn.btn-primary:focus {
        background-color: var(--btn-bg-color);
    }
    .btn.btn-primary:hover {
        background-color: var(--btn-bg-color);
    }

    .btn:disabled,
    .btn[disabled] {
        // background-color: var(--btn-disabled-bg-color);
        opacity: 0.7;
        cursor: not-allowed;
    }

    .btn-small {
        width: 40%;
        margin: 20px auto;
    }

    .btn-close {
        cursor: pointer;
        font-size: 40px;
        position: absolute;
        right: 14px;
        top: 0;
        transform: rotate(45deg);
        color: var(--ternary-text-color, #0d3c32);
    }

    // 4.1 checkbox
    .checkbox {
        margin-right: 10px;
        min-width: unset;
    }

    .checkbox-container {
        align-items: center;
        display: flex;
        margin-top: 14px;
    }

    // 4.1 input fields
    .mandatory-container {
        margin-top: 10px;
    }

    /*  ===================
    Partials
    =================== */

    .or-social-login {
        margin: 15px 0;
    }

    .fa-eye {
        cursor: pointer;
        position: absolute;
        right: 0px;
    }

    .action {
        color: var(--ternary-text-color, #0d3c32);
        margin-top: 15px;
        cursor: pointer;
    }
}

